handle various Gradle warnings